# pdf-translator

./: .gitignore  app.py  draw_rectangle.py  image_util.py  ocr.py  pdf_to_image.py  pyproject.toml  readme.md  text_coordinate_extractor.py  text_info.py  translator.py  translator_minna.py  システム構成図.md
