[tool.poetry]
name = "pdf-translator"
version = "0.1.0"
description = ""
authors = ["Your Name <@google.com>"]

[tool.poetry.dependencies]
python = ">=3.9, <3.11"
pdf2image = "^1.16.0"
pyocr = "^0.8"
numpy = "^1.21.4"
opencv-python = "^4.5.4"
requests = "^2.26.0"
requests-oauthlib = "^1.3.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
